<resources>
    <string name="app_name">NossoControleFinanceiro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_app_name">Nosso controle Financeiro</string>
    <string name="title_email">Email:</string>
    <string name="title_password">Senha:</string>
    <string name="title_enter">Entrar</string>
    <string name="title_register_new_user">Cadastrar-se</string>
    <string name="hint_password">Entre com sua senha</string>
    <string name="hint_email">Entre com seu email</string>
    <string name="title_name">Nome:</string>
    <string name="hint_enter_name">Entre com seu nome completo</string>
    <string name="title_re_password">Repetir senha:</string>
    <string name="hint_re_password">Repita sua senha</string>
    <string name="title_confirm">Confirmar</string>
    <string name="title_choice_your_control">Escolha seu controle</string>
    <string name="title_id">ID do controle:</string>
    <string name="hint_enter_with_control_id">Entre com o id do controle</string>
    <string name="title_create_new_control">Criar um novo controle</string>
    <string name="title_profile">Perfil</string>
    <string name="title_transactions">Transações</string>
    <string name="title_credit_cards">Cartões</string>
    <string name="title_history">Histórico</string>
    <string name="title_my_credit_cards">Meus cartões</string>
    <string name="title_my_transactions">Minhas transações</string>
    <string name="title_categories">Categorias</string>
    <string name="title_settings">Configurações</string>
    <string name="title_quit">Sair</string>
    <string name="title_day_of_payment">Dia do salário:</string>
    <string name="title_value_of_payment">Valor do salário:</string>
    <string name="title_credit_card_limit_available">Limite disponível:</string>
    <string name="title_credit_card_limit_total">Limite total:</string>
    <string name="title_filter">Filtrar</string>
    <string name="title_last_transactions">Ultimas transações</string>
    <string name="title_next_invoice">Próxima fatura:</string>
    <string name="title_cash_purchases">Compras parceladas</string>
    <string name="title_description">Descrição:</string>
    <string name="hint_description">Descrição</string>
    <string name="title_payment_type">Tipo de pagamento:</string>
    <string name="title_category">Categoria:</string>
    <string name="title_card">Cartão:</string>
    <string name="title_value">Valor:</string>
    <string name="hint_money_value">R$0,00</string>
    <string name="hint_insert_name_credit_card">Insira um nome para seu cartão</string>
    <string name="title_value_of_cash_purchases">Valor da parcela:</string>
    <string name="title_total_cash_purchases">Total de parcelas:</string>
    <string name="title_total_cash_purchases_payed">Total de parcelas pagas:</string>
    <string name="title_add">Adicionar</string>
    <string name="title_payments_cash_purchases">Compra parcelada</string>
    <string name="hint_name_category">Nome da categoria</string>
    <string name="alert_message_username">Você precisa preencher o campo nome</string>
    <string name="alert_message_email">Você precisa preencher com um email valido</string>
    <string name="alert_message_password">Sua senha precisa ter mais que 8 caracteres</string>
    <string name="alert_message_repassword">As suas senhas precisão ser iguais</string>
    <string name="alert_message_imageupload">Você precisa carregar uma imagem de perfil</string>
    <string name="hint_category_name">Nome da categoria</string>
    <string name="title_control_without_transactions">Seu controle não possui nenhuma transação!</string>
    <string name="title_categories_empty">Seu controle não possui nenhuma categoria!</string>
    <string name="title_credit_cards_list_empty">Seu controle não possui nenhum cartão de credito!</string>
    <string name="title_due_date">Dia de vencimento:</string>
    <string name="title_installment_purchases_placeholder">Sem nenhuma compra parcelada!</string>


    <string name="janeiro">Janeiro</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="março">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="julho">Julho</string>
    <string name="agosto">Agosto</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>

    <array name="PaymentType">
        <item>Crédito</item>
        <item>Debito</item>
        <item>Dinheiro</item>
    </array>

</resources>