<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".view.lobby.LobbyFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_white_24"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title_medium"
            android:textSize="50sp"
            android:text="@string/title_choice_your_control"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_id"
                android:layout_marginEnd="16dp"
                style="@style/title_medium"/>

            <EditText
                android:id="@+id/lobby_id_input"
                android:hint="@string/hint_enter_with_control_id"
                android:maxLength="20"
                style="@style/edit_default"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lobby_enter_button"
            style="@style/button_default"
            android:text="@string/title_enter"
            android:layout_marginTop="18dp"
            app:cornerRadius="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lobby_create_new_control_button"
            style="@style/button_default"
            android:text="@string/title_create_new_control"
            android:layout_marginTop="8dp"
            app:cornerRadius="5dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>