<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.login.LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_logo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/title_medium"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/title_email" />

            <EditText
                android:id="@+id/login_email_input"
                style="@style/edit_default"
                android:gravity="center"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/title_medium"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/title_password" />

            <EditText
                android:id="@+id/login_password_input"
                style="@style/edit_default"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:maxLength="10" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/login_progressbar"
            android:visibility="gone"
            tools:visibility="visible"
            android:indeterminateTint="@color/lightBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_enter_button"
            android:enabled="false"
            app:cornerRadius="5dp"
            android:textColor="@color/darkBlue"
            android:text="@string/title_enter"
            style="@style/button_default" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_register_button"
            app:cornerRadius="5dp"
            android:text="@string/title_register_new_user"
            style="@style/button_default" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>