<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".view.settings.SettingsFragment">

    <ImageButton
        android:id="@+id/settings_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_title"
        style="@style/title_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_settings"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/settings_date_cardview"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white">

            <TextView
                style="@style/title_regular"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="16dp"
                android:text="@string/title_day_of_payment"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/settings_day_payment"
                style="@style/title_regular"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="16dp"
                tools:text="25"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/settings_edit_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/baseline_edit_calendar_24"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@id/settings_date_cardview"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="10dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white">

            <TextView
                style="@style/title_regular"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/title_value_of_payment"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/settings_value_payment_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:hint="R$5.000,00"
                android:background="@drawable/edit_payment_background"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>